<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mode_layout"
    android:padding="8dp">
    
    <RadioGroup
        android:id="@+id/radio_math_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp" >
 
        <RadioButton
            android:id="@+id/radio_math_mode_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_math_mode_0" 
            android:checked="true" />
        <RadioButton
            android:id="@+id/radio_math_mode_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_math_mode_1"/>
        <RadioButton
            android:id="@+id/radio_math_mode_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_math_mode_2"/>
        <RadioButton
            android:id="@+id/radio_math_mode_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_math_mode_3"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/check_show_ops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_show_ops"
        android:checked="true" />
</LinearLayout>
