<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_layout" 
	android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
    android:padding="10dp" >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">  
	    <TextView android:text="@string/help_rules_title"
	    	android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:textStyle="bold"
	        android:textSize="16sp" 
	        android:paddingTop="10dp" />
	    <TextView android:text="@string/help_rules_summary"
	    	android:layout_width="wrap_content"
	        android:layout_height="fill_parent" />
		<TextView android:text="@string/help_instructions_title"
	    	android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:textStyle="bold"
	        android:textSize="16sp" 
			android:paddingTop="10dp" />
	    <TextView android:text="@string/help_instructions_summary"
	    	android:layout_width="wrap_content"
	        android:layout_height="fill_parent" />
	</LinearLayout>       
</ScrollView>
